created .env & added to .gitignore

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "inquirer": "^7.0.4",
     "util": "^0.12.1"
   },
